# cliclack-yaml

./: Cargo.toml  LICENSE  README.md
examples/config/: README.md
examples/config/auth/: api-key.yaml  login.yaml  logout.yaml  register.yaml  status.yaml
examples/config/check/: system.yaml
examples/config/config/: add.yaml  list.yaml  remove.yaml
examples/config/init/: already-exists.yaml  setup-error.yaml  setup-force.yaml  setup-success.yaml
examples/config/install/: progress.yaml
examples/config/items/: add-form.yaml  add-scoped.yaml  add-space-select.yaml  (+2 more)
src/: lib.rs  test_utils.rs
src/steps/: clear.rs  confirm.rs  input.rs  intro.rs  mod.rs  multi_select.rs  outro.rs  password.rs  print.rs  progress.rs  select.rs  spinner.rs
tests/: test_cliclack_yaml_init.rs  test_cliclack_yaml_lib.rs  test_conditional_steps.rs  test_confirm_steps.rs  test_input_steps.rs  test_intro_outro_steps.rs  test_multi_select_steps.rs  test_password_steps.rs  test_print_steps.rs  test_progress_steps.rs  test_select_steps.rs  test_spinner_steps.rs
tests/steps/: api_project_setup.yaml  clear_intro_outro.yaml  cli_project_setup.yaml  simple_conditional_test.yaml  simple_output_test.yaml  test_conditional.yaml  test_confirm.yaml  test_input.yaml  test_multi_progress.yaml  test_multi_select.yaml  test_password.yaml  test_password_confirm_default.yaml  test_password_mask.yaml  test_password_simple.yaml  test_password_validation.yaml  test_print.yaml  test_progress_bar.yaml  test_progress_bar_download.yaml  test_select_conditional.yaml  test_spinner.yaml  web_project_setup.yaml
(+6 files in other folders)
