[package]
name = "cliclack_yaml"
version = "0.1.1"
edition = "2024"
authors = ["Michael Bauer"]
description = "A YAML-based configuration layer for cliclack interactive CLI prompts"
license = "MIT"
repository = "https://github.com/mibaatwork/cliclack-yaml"
keywords = ["cli", "yaml", "prompt", "interactive", "cliclack"]
categories = ["command-line-interface"]
readme = "README.md"

[dependencies]
anyhow = "1.0.98"
cliclack = "0.4.0"
console = "0.16.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde-saphyr = "0.0.21"
serde_json = "1.0.142"
once_cell = "1.21.3"
include_dir = "0.7.4"
